manifests/apache/apache-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "apache"
  name: "apache-ingress"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "apache.dlwhitehurst.com"
    secretName: "apache-prod-tls"
  rules:
  - host: "apache.dlwhitehurst.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "apache"
            port:
              number: 80 
---
